--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: scrolling_day_calendar
 description: A flutter calendar for scrolling a day date 
-version: 0.0.1
-author: BMB Enterprises
+version: 0.0.2
+author: "BMB enterprises <info@bmbenterprises.ltd>"
 homepage: https://bmbenterprises.ltd
 
 environment:
