add github link to package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: scrolling_day_calendar
 description: A flutter calendar package to allow users to scroll through given dates
-version: 2.0.1
+version: 2.0.2
 author: "BMB enterprises <info@bmbenterprises.ltd>"
 homepage: http://bmbenterprises.ltd
+github: https://github.com/bmb-enterprises/scrolling-day-calendar
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
