add license file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,7 @@ name: scrolling_day_calendar
 description: A flutter calendar package to allow users to scroll through given dates
 version: 2.0.2
 author: "BMB enterprises <info@bmbenterprises.ltd>"
-homepage: http://bmbenterprises.ltd
-github: https://github.com/bmb-enterprises/scrolling-day-calendar
+homepage: https://github.com/bmb-enterprises/scrolling-day-calendar
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
